# backend-api-in-rust-for-beginner

./: .gitignore  Cargo.toml  README.md
deploy/: install.sh  nginx.conf  systemd.service
deploy/systemd/: install.sh
migrations/2025-01-24-073802_create_rustaceans/: up.sql
src/: auth.rs  main.rs  model.rs  repositories.rs
