[package]
name = "backend-api-in-rust-for-beginner"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
base64 = "0.22.1"
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2.0"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
